agregando algunos estilos a las cards

--- a/PI-Videogames-main-master/client/src/index.css
+++ b/PI-Videogames-main-master/client/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background: url('');
+  /* background: url(''); */
   background-position:bottom;
   background-size:contain;
   margin: 0;
