--- a/PI-Videogames-main-master/client/src/index.css
+++ b/PI-Videogames-main-master/client/src/index.css
@@ -9,7 +9,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+input{
+  caret-color: rgba(40, 9, 241, 0.698);
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
