--- a/PI-Videogames-main-master/client/src/components/Card/Card.module.css
+++ b/PI-Videogames-main-master/client/src/components/Card/Card.module.css
@@ -19,20 +19,24 @@
    color: white;
    display: flex;
    align-items: flex-start;
-   /* flex-wrap: wrap; */
+   flex-wrap: wrap;
    font-size: 0.7rem;
+   justify-content: center;
 }
 
 .genres {
     color: white;
     display: flex;
-    align-items: flex-start;
-    font-size: 0.6rem;
+    align-items: center;
+    font-size: 0.8rem;
+    justify-content: center;
+    
 }
 
 .rating {
     color: yellow;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
+    
 }
