--- a/PI-Videogames-main-master/client/src/components/Home/Home.module.css
+++ b/PI-Videogames-main-master/client/src/components/Home/Home.module.css
@@ -2,25 +2,39 @@
 
 
 .cardsjuegos{
-    background-color: rgb(42, 89, 89);
+    background-color: transparent;
     display: flex;
     flex-wrap: wrap;
     width: auto;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    border: 1px solid #CEE0DC ;
+    border-radius: 5%;
+
 }
 .cards{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    background-color: rgb(42, 89, 89);
+    justify-content:space-evenly;
+    background: rgb(33,33,128);
+    background: linear-gradient(90deg, rgba(33,33,128,0.8743872549019608) 4%, rgba(142,62,120,0.804359243697479) 50%, rgba(27,133,154,0.7679446778711485) 100%);
+   
+}
+.title{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    margin-bottom: 10px;
+    
 }
 
-
 .container{
-    background-color: rgb(42, 89, 89);
+    background: rgb(33,33,128);
+    background: linear-gradient(90deg, rgba(33,33,128,0.8743872549019608) 4%, rgba(142,62,120,0.804359243697479) 50%, rgba(27,133,154,0.7679446778711485) 100%);
+    width: 100%;
+    height: 100vh;
 }
 
 .filters{
-    
+    margin-bottom: 10px;
+    margin-top: 10px;
     width: 100%;
     display: flex;
    list-style: none;
@@ -35,44 +49,125 @@
     margin:5px;
     padding: 5px;
 }
-.loading body {
- background-color: #202628;
 
-}
-.loading img{
-    height: 350px;
-    width: 500px;
-}
-.loading center-body{
-    display: flex;
+.titleVideogames{
+    font-family: 'Monaco' ;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100vh;
+    justify-items: center;
+    display: flex;
+}
+
+.buttonCrear{
+    margin-right: 10px;
+    padding:12px;
+    width: 190px;
+    cursor: pointer;
+    background: #799be6;
+    color: white;
+    transition:  .5s ease;
+    border-radius: 10px;
+
 
 }
-.loadertriangle-3{
-    stroke: #ffeb3b;
+.buttonCrear:hover{
+    background: transparent;
+    border: 2px solid #799be6; 
+    box-shadow: 0 0 10px 0 #799be6 inset,
+                0 0 10px 4px #799be6;
+    border-radius: 10px;   
 }
-body{
-    background-color: #202628;
-}
-.center-body{
-    display:flex;
 
-justify-content:center ;
-align-items: center;
-width: 100%;
-height: 100vh;
+.acomodarFiltros{
+    margin-left:10px;
+     margin-bottom: 5px;
 }
-.loader-triangle-3 polygon{
-    stroke: #ffeb3b;
-    stroke: #fff;
-    stroke-dasharray: 17;
-    animation: anm-tr-3-move 2.5s cubic-bezier(0.35, 0.04, 0.063, 0.95) infinite;
+
+.title{
+   
 }
-@keyframes anm-tr-move{
-    to{
-        stroke-dashoffset: 136;
-    }
+
+.FILTROS{
+     margin-left:10px;
+     margin-bottom: 5px;
+
 }
+.boton1{
+    padding:12px;
+    width: 190px;
+    cursor: pointer;
+    background: #799be6;
+    color: white;
+    transition:  .5s ease;
+    border-radius: 10px;
+}
+.boton1:hover{
+    background: transparent;
+    border: 2px solid #799be6; 
+    box-shadow: 0 0 10px 0 #799be6 inset,
+                0 0 10px 4px #799be6;
+    border-radius: 10px;  
+}
+.filters option{
+    text-align: center;
+    display: block;
+	/* width: 190px; */
+	cursor: pointer;
+  	padding: 12px;
+  	height: auto;
+  	outline: 0; 
+  	border: 0;
+	border-radius: 0;
+    background: #fff;
+	color: #799be6;;
+    font-weight: bolder;
+	font-size: 18px;
+	color: #799be6;;
+    border-radius: 12px;
+    position: relative;
+    transition: 0.6s;
+    padding: auto;
+}
+.filters{
+   padding:6px;
+   margin-left: 42%;
+    width: 190px; 
+    cursor: pointer;
+    background: #799be6;
+    color: white;
+    transition:  .5s ease;
+    border-radius: 10px;
+    /* align-items: center;
+    position: center */;
+    justify-content: center;
+    justify-items: center;
+   
+  
+}
+.filters:hover{
+    background: transparent;
+    border: 2px solid #799be6; 
+    box-shadow: 0 0 10px 0 #799be6 inset,
+                0 0 10px 4px #799be6;
+    border-radius: 10px;  
+}
+.filters select{
+    appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+}
+.filters select::-ms-expand{
+    display: none;
+}
+
+.searchBar{
+    margin-bottom: 40px;
+}
+
+.logo{
+    display: flex;
+    justify-items: center;
+   padding: 5px 30px 5px 30px;
+   align-items: center;
+}
+
