--- a/PI-Videogames-main-master/client/src/components/VgCreate/VideogameCreate.css
+++ b/PI-Videogames-main-master/client/src/components/VgCreate/VideogameCreate.css
@@ -1,3 +1,10 @@
+.App{
+    background: rgb(33,33,128);
+    background: linear-gradient(90deg, rgba(33,33,128,0.8743872549019608) 4%, rgba(142,62,120,0.804359243697479) 50%, rgba(27,133,154,0.7679446778711485) 100%);
+    height: 100vh;
+}
+
+
 .containerCreate{
     display: flex;
     flex-direction: column;
@@ -9,7 +16,8 @@
     align-items: center;
     padding: 10px;
     font-weight: bold;
-    background: #bbc2;
+    background: rgb(33,33,128);
+    background: linear-gradient(90deg, rgba(33,33,128,0.8743872549019608) 4%, rgba(142,62,120,0.804359243697479) 50%, rgba(27,133,154,0.7679446778711485) 100%);
 }
 textarea{
     border-radius: 10px;
@@ -35,35 +43,31 @@ form{
     justify-content: center;
     align-items: center;
     align-self: center;
-    width: 170px;
+    width: 10px;
     position: relative;
 }
 .genresForm{
-    padding: 5px;
-    
+    padding: 10px;
+
+
 }
 
 .createButton{
+    padding:12px;
     width: 190px;
-    height: 45px;
-    padding: 2px;
-    margin: 12px;
-    border: none;
-    border-radius: 50px;
-    transition: 0.6s;
-    background: #bbc2;
-    font-weight: bolder;
     cursor: pointer;
-    opacity: 98%;
-    font-size: 25px;
+    background: #799be6;
+    color: white;
+    transition:  .5s ease;
+    border-radius: 10px;
 }
 .createButton:hover{
-    background: #000;
-    color: white;
-    width: 200px;
+    background: transparent;
+    border: 2px solid #799be6; 
+    box-shadow: 0 0 10px 0 #799be6 inset,
+                0 0 10px 4px #799be6;
+    border-radius: 10px;       
 }
-
-
 .containerForm select{
     appearance: none;
 	-webkit-appearance: none;
@@ -75,18 +79,18 @@ form{
 .containerForm select{
     text-align: center;
     display: block;
-	width: auto;
+	width: 190px;
 	cursor: pointer;
-  	padding: 7px 10px 10px;
+  	padding: 12px;
   	height: auto;
   	outline: 0; 
   	border: 0;
 	border-radius: 0;
     background: #fff;
-	color: #7b7b7b;
+	color: #799be6;;
     font-weight: bolder;
 	font-size: 25px;
-	color: #000;
+	color: #799be6;;
     border-radius: 12px;
     position: relative;
     transition: 0.6s;
